2006-01-01  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (g_spawn_sync_utf8): Set the GIOChannels for
	stdout and stderr to unbuffered. Otherwise the giochannel layer
	will try to read from them regardless whether the
	g_io_channel_win32_poll() call here has indicated
	readability or not. (#325310)

2005-12-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (glib_check_version): Fix a copy-and-paste error
	in the docs.  (#325273, Declan Naughton)

2005-12-27  Manish Singh  <yosh@gimp.org>

	* tests/run-collate-tests.sh: use LC_ALL instead of LC_COLLATE, to
	make sure we really override things.

2005-12-27  Matthias Clasen  <mclasen@redhat.com>
	
	Fix #316221, Michal Benes, Stanislav Brabec;

	* configure.in: Fix a strict aliasing problem in 
	g_static_mutex_get_mutex(). 
	* glib/gthread.h: ...and in 
	g_static_mutex_get_mutex_impl_shortcut().

	* glib/gdatasetprivate.h: Add a cast to silence compiler
	warnings.  (#321978, Andrew Paprocki)

	Partial fix for bug #32937, Bogdan Nicula.

	* configure.in: Check for malloc.h
	* glib/gslice.c: Don't include malloc.h unconditionally.

2005-12-27  Manish Singh  <yosh@gimp.org>

	* tests/run-collate-tests.sh: export LC_COLLATE so it takes.
	(#324950, Dan Yefimov)

2005-12-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslice.c: On Win32, include process.h  (#325015, Kazuki
	Iwamoto)

2005-12-25  Matthias Clasen  <mclasen@redhat.com>

	* AUTHORS: Update my email

	* tests/slice-test.c: Fix C99isms.  (#324950, Dan Yefimov)

2005-12-21  Matthias Clasen  <mclasen@redhat.com>
	
	* README.in: Add some notes on when 'make check' may fail.

2005-12-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: 
	* glib/gthreadpool.h: 
	* glib/gthreadpool.c (g_thread_pool_set_sort_function): New function
	to sort tasks pushed into a threadpool.  (#324479, Martyn Russell)

	* tests/threadpool-test.c: Test this.

Tue Dec 20 18:14:14 2005  Tim Janik  <timj@imendio.com>
